--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ body {
     margin-left: auto;
     color: white;
     text-align: center;
-    font-size: 24px;
+    font-size: 32px;
     font-weight: bold;
 
 }
@@ -43,13 +43,17 @@ body {
 }
 
 #overallScore {
-    margin-top: 10px;
+    /* margin-top: 40px; */
     background-color: #F59275;
     color: white;
     font-size: 24px;
     padding-left: 10px;
+    padding-bottom: 10px;
 }
 
+#wins {
+/* margin-top: 10px; */
+}
 
 .crystals {
     background-color: paleturquoise;
